; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_cat-file.c_stream_blob.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_cat-file.c_stream_blob.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.object_id = type { i32 }

@.str = private unnamed_addr constant [30 x i8] c"unable to stream %s to stdout\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object_id*)* @stream_blob to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stream_blob(%struct.object_id* %0) #0 {
  %2 = alloca %struct.object_id*, align 8
  store %struct.object_id* %0, %struct.object_id** %2, align 8
  %3 = load %struct.object_id*, %struct.object_id** %2, align 8
  %4 = call i64 @stream_blob_to_fd(i32 1, %struct.object_id* %3, i32* null, i32 0)
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %10

6:                                                ; preds = %1
  %7 = load %struct.object_id*, %struct.object_id** %2, align 8
  %8 = call i32 @oid_to_hex(%struct.object_id* %7)
  %9 = call i32 @die(i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0), i32 %8)
  br label %10

10:                                               ; preds = %6, %1
  ret i32 0
}

declare dso_local i64 @stream_blob_to_fd(i32, %struct.object_id*, i32*, i32) #1

declare dso_local i32 @die(i8*, i32) #1

declare dso_local i32 @oid_to_hex(%struct.object_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
